Desktop Nav and Header bare bones done

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Pacifico&display=swap" rel="stylesheet">
+    <style>
+      main {
+        min-height: calc(100vh - 120px);
+      }
+      .page {
+        height: 100%;
+        position: relative;
+      }
+      header:first-of-type {
+        height: 120px;
+        position: absolute;
+        top: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
