--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style>
       main {
-        min-height: calc(100vh - 120px);
+        min-height: calc(100vh - 240px);
       }
-      .page {
+      /* .page {
         height: 100%;
         position: relative;
-      }
-      header:first-of-type {
+      } */
+      header:first-of-type,
+      footer {
         height: 120px;
-        position: absolute;
-        top: 0;
+        /* position: absolute;
+        top: 0; */
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Pacifico&display=swap" rel="stylesheet">
