--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,68 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Cristin O'Connor | Front End Engineer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style>
-      main {
-        min-height: calc(100vh - 240px);
+      html {
+        position: relative;
+      }
+      .header {
+        position: absolute;
+        top: 0;
+        height: 120px;
+      }
+      footer {
+        position: absolute;
+        top: calc(100vh - 120px);
+        height: 120px;
+      }
+      .page-content {
+        min-height: calc(100vh - 120px);
+        height: 100%;
+        /* display: flex;
+        flex-direction: column;
+        height: 100%;
+        min-height: 100%;
+        width: 100%; */
+        /* max-height: 100vh; */
+        /* min-height: calc(100% - 240px); */
       }
       /* .page {
         height: 100%;
         position: relative;
       } */
-      header:first-of-type,
+      .header,
       footer {
+        position: absolute;
         height: 120px;
         /* position: absolute;
         top: 0; */
       }
+      footer {
+        top: 100vh;
+      }
+      .header {
+        top: 0;
+      }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Pacifico&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
   </body>
